Fix overflow

--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,7 @@ html, body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  overflow: hidden
+  overflow: auto;
 }
 
 #container {
